--- a/css/lobby.css
+++ b/css/lobby.css
@@ -38,3 +38,23 @@ a {
 a:hover {
     color: #6e2d2d;
 }
+
+h1 {
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    color: rgb(240, 252, 185);
+    font-size: 50px;
+}
+
+h2 {
+    position: absolute;
+    top: 88%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    color: rgb(240, 252, 185);
+    font-size: 24px;
+}
