--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
 body {
     height: 100vh;
     margin: 0;
-    background: url("../images/kabuto.jpeg");
+    background: url("../images/kabutoBac.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
     max-height: 100vh;
@@ -23,7 +23,7 @@ body {
   
 .grid {
     align-items: center;
-    background-color: #2c1120;
+    background-color: rgb(17, 29, 43);
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2);
     display: flex;
     flex-wrap: wrap;
@@ -31,6 +31,7 @@ body {
     justify-content: center;
     height: 600px;
     width: 600px;
+    margin: 40px;
 }
   
 .grid div {
@@ -46,14 +47,14 @@ body {
     background-size: contain;
     display: flex;
     align-items: center;
-    cursor: pointer;
+    background-position: center;
+    justify-content: center;
 }
 
 .grid div.head {
     background-image: url('../images/head.png');
     background-repeat: no-repeat;
     background-size: contain;
-    cursor: pointer;
 }
 
 .food {
@@ -66,11 +67,12 @@ a {
     font-size: 24px;
 }
 a:hover {
-    color: #6e2d2d;
+    color: rgb(185, 226, 252);
 }
 
 #backBtn {
     display: flex;
     margin: 0;
     padding: 20px;
+    width: 50px;
 }
