--- a/css/styles.css
+++ b/css/styles.css
@@ -27,11 +27,11 @@ body {
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2);
     display: flex;
     flex-wrap: wrap;
-    height: 100%;
     justify-content: center;
     height: 600px;
     width: 600px;
     margin: 40px;
+    margin-bottom: 100px;
 }
   
 .grid div {
@@ -79,4 +79,11 @@ a:hover {
 
 .grid div.snakeBody {
     background-color: rgb(131, 26, 105);
+}
+
+#updateScore {
+    margin-left: 50px;
+    margin-bottom: -80px;
+    width: 50px;
+    color: rgb(185, 226, 252);
 }
