fixed food path

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,7 @@ body {
 }
 
 .grid div.food {
-    background-image: url('/images/uchiha.png');
+    background-image: url('../images/uchiha.png');
     background-repeat: no-repeat;
     background-size: contain;
     display: flex;
@@ -58,7 +58,7 @@ body {
 }
 
 .food {
-    background-image: url(/images/uchiha.png);
+    background-image: url(../images/uchiha.png);
 }
 
 a {
